# jenova

./: .gitignore  .gitmodules  agent.py  client.py  example_curl.txt  main.py  pyproject.toml  working_example.txt
a2a_test/: agent.py
agent/: __init__.py  agent.py  graph.py  nodes.py  server.py  utils.py
agent/services/: db.py
agent/tools/: lights.py
cli/: agent.py  main.py
jenova/: __init__.py  a2a_server.py  discovery.py  graph.py  memory.py  nodes.py  tools.py  utils.py
jenova/nodes/: __init__.py  actions.py  classifiers.py  experts.py
jenova/skills/system-diagnostics/: SKILL.md
jenova/skills/system-diagnostics/scripts/: ping_test.py
jenova/tools/: __init__.py  lights.py  memory.py  search.py
jenova_client/: __init__.py  __main__.py  chat.py  constants.py  session.py
src/agent_lab/: agent.py
src/agent_lab/calculator_agent/: agent.py
src/agent_lab/dice_agent/: agent.py  tools.py
src/agent_lab/manager_agent/: agent.py
src/agent_lab/sub_agents/calculator/: agent.py  tools.py
src/agent_lab/sub_agents/coder/: agent.py
src/agent_lab/sub_agents/dice/: agent.py
web/: agent.py
