[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "jenova"
version = "0.1.0"
description = "The Jenova agent"
requires-python = ">=3.10"
dependencies = [
    "google-adk[extensions]",
    "asyncpg",
    "httpx",
    "httpx-sse",
]

[project.optional-dependencies]
dev = [
    "pytest",
]
server = [
    "uvicorn",
]

[project.scripts]
jenova_client = "jenova_client.client:main"

[tool.pylint.messages_control]
disable = [
    "import-error",
    "no-name-in-module"
]

[tool.setuptools]
packages = ["jenova", "jenova_client"]
